fixing the tracking same instance problem

--- a/Movie_Exercise/appsettings.json
+++ b/Movie_Exercise/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Movie_Exercise;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Movie_Exercise_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -10,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
